--- a/UI/Views/TestDetailsView.xaml
+++ b/UI/Views/TestDetailsView.xaml
@@ -18,54 +18,60 @@
         
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
 
-            <Label Content="{Binding Test.Model.Name, FallbackValue='Test Name'}" FontSize="48"
+            <Label Content="{Binding Test.Name, FallbackValue='Test Name'}" FontSize="48"
                    HorizontalAlignment="Center"/>
 
-            <Label Content="{Binding Test.Model.Description, FallbackValue='Test Description'}" FontSize="24"
-                   Visibility="{Binding Test.Model.HasDesription, Converter={StaticResource BoolToVis}}"/>
+            <Label Content="{Binding Test.Description, FallbackValue='Test Description'}" FontSize="24"
+                   Visibility="{Binding Test.HasDescription, Converter={StaticResource BoolToVis}}"/>
 
-            <Label Content="{Binding Test.QuestionsCount, FallbackValue='NULL'}"
+            <Label Content="{Binding Test.Questions.Count, FallbackValue='NULL'}"
                    ContentStringFormat="Кількість питань: {0}"
                    FontSize="24"/>
 
             <Label Content="{Binding LastTestAttempt.AmountOfAnsweredQuestions, FallbackValue='NULL'}"
                    ContentStringFormat="Прохідний бал: {0}"
                    FontSize="24"
-                   Visibility="{Binding HasLastTestAttempt, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding HasLastTestAttempt, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
+            <Label Content="{Binding LastTestAttempt.Grade, FallbackValue='NULL'}"
+                   ContentStringFormat="Оцінка: {0}"
+                   FontSize="24"
+                   Visibility="{Binding LastTestAttempt.HasGrade, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
+            
             <Label Content="{Binding Test.MaxGrade, FallbackValue='NULL'}"
-                   ContentStringFormat="Кількість наданих відповідей: {0}"
-                   FontSize="24"/>
+                   ContentStringFormat="Максимальний бал: {0}"
+                   FontSize="24"
+                   Visibility="{Binding HasLastTestAttempt, Converter={StaticResource BoolToVis}}"/>
 
-            <Label Content="{Binding Test.Model.RequiredGrade, FallbackValue='NULL'}"
+            <Label Content="{Binding Test.RequiredGrade, FallbackValue='NULL'}"
                    ContentStringFormat="Прохідний бал: {0}"
                    FontSize="24"
-                   Visibility="{Binding Test.Model.HasRequiredGrade, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding Test.HasRequiredGrade, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
-            <Label Content="{Binding Test.Model.TimeLimit, FallbackValue='NULL'}"
+            <Label Content="{Binding Test.TimeLimit, FallbackValue='NULL'}"
                    ContentStringFormat="Час на проходження: {0}"
                    FontSize="24"
-                   Visibility="{Binding Test.Model.HasTimer, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding Test.HasTimer, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
             
-            <Label Content="{Binding LastTestAttempt.Model.LeftoverTime, FallbackValue='NULL'}"
-                   ContentStringFormat="Залишковий час після проходження: {0}"
+            <Label Content="{Binding LastTestAttempt.LeftoverTime, FallbackValue='NULL'}"
+                   ContentStringFormat="Залишковий час після проходження: {0:hh\:mm\:ss}"
                    FontSize="24"
-                   Visibility="{Binding LastTestAttempt.Model.HasLeftoverTime, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding LastTestAttempt.HasLeftoverTime, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
             <Label Content="{Binding Test.TerminLocal, FallbackValue='NULL'}"
                    ContentStringFormat="Закривається о {0:HH:mm:ss dd.MM.yyyy}"
                    FontSize="24"
-                   Visibility="{Binding Test.Model.HasTermin, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding Test.HasTermin, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
             <Label Content="{Binding LastTestAttempt.StartedAtLocal, FallbackValue='NULL'}"
                    ContentStringFormat="Почато о {0:HH:mm:ss dd.MM.yyyy}"
                    FontSize="24"
-                   Visibility="{Binding HasLastTestAttempt, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding HasLastTestAttempt, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
             <Label Content="{Binding LastTestAttempt.EndedAtLocal, FallbackValue='NULL'}"
                    ContentStringFormat="Завершено о {0:HH:mm:ss dd.MM.yyyy}"
                    FontSize="24"
-                   Visibility="{Binding LastTestAttempt.WasEnded, FallbackValue=False, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding LastTestAttempt.WasEnded, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
             <Button Content="Почати" FontSize="24" Command="{Binding StartNewAttemptCommand}" 
                     Visibility="{Binding CanStart, Converter={StaticResource BoolToVis}}"/>
