Start. Log In Rework

--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:UI.Views"
              StartupUri="Views/MainWindowView.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ResourceDictionaries/Templates.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
