--- a/UI/Views/LogInView.xaml
+++ b/UI/Views/LogInView.xaml
@@ -7,10 +7,6 @@
              xmlns:viewmodels="clr-namespace:UI.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LogInViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
-    </UserControl.Resources>
-    
     <Border Margin="25,10,25,50">
         <Grid VerticalAlignment="Center">
             <Grid.RowDefinitions>
@@ -32,24 +28,32 @@
             <Label Content="Username:" FontSize="24"
                    HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"
                    Grid.Row="1" Grid.Column="0"/>
-            <TextBox Text="{Binding Username}" MaxLines="1" FontSize="24"
-                     MinWidth="150"
-                     VerticalAlignment="Bottom"
+            <TextBox Text="{Binding Username,
+                                    UpdateSourceTrigger=PropertyChanged,
+                                    ValidatesOnDataErrors=True,
+                                    NotifyOnValidationError=True}" 
+                     Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"
+                     MaxLines="1" FontSize="24" MaxLength="16"
+                     VerticalAlignment="Bottom" MinWidth="150" Margin="0,0,0,25"
                      Grid.Row="1" Grid.Column="1" 
                      TabIndex="0"/>
 
             <Label Content="Password:" FontSize="24"
                    HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"
                    Grid.Row="2" Grid.Column="0"/>
-            <TextBox Text="{Binding Password}" MaxLines="1" FontSize="24" 
-                     MinWidth="150" 
-                     VerticalAlignment="Bottom"
+            <TextBox Text="{Binding Password,
+                                    UpdateSourceTrigger=PropertyChanged,
+                                    ValidatesOnDataErrors=True,
+                                    NotifyOnValidationError=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationErrorTemplate}"
+                     MaxLines="1" FontSize="24" MaxLength="16"
+                     VerticalAlignment="Bottom" MinWidth="150" Margin="0,0,0,25"
                      Grid.Row="2" Grid.Column="1" 
                      TabIndex="1"/>
 
-            <Button Content="Log In" FontSize="24" Command="{Binding LogInCommand}"
-                    MinWidth="125"
-                    VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,20,0,0" Padding="15,3,15,3" 
+            <Button Content="Log In" FontSize="24" 
+                    Command="{Binding LogInCommand}"
+                    VerticalAlignment="Center" HorizontalAlignment="Center" MinWidth="125" Margin="0,20,0,0" Padding="15,3,15,3" 
                     Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
                     TabIndex="2"/>
         </Grid>
