--- a/UI/Views/TestAttemptView.xaml
+++ b/UI/Views/TestAttemptView.xaml
@@ -6,14 +6,14 @@
              xmlns:local="clr-namespace:UI.Views" 
              xmlns:viewmodels="clr-namespace:UI.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:TestAttemptViewModel}"
              xmlns:models="clr-namespace:UI.ObservableModels"
-             xmlns:convertors="clr-namespace:UI.Convertors"
+             xmlns:converters="clr-namespace:UI.Converters"
              xmlns:selectors="clr-namespace:UI.Selectors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <!--Сonvertors-->
-        <convertors:QuestionStateToBrushConverter x:Key="QuestionStateToBrush"/>
-        <convertors:IndexToNumberConverter x:Key="IndexToNum"/>
+        <converters:QuestionStateToBrushConverter x:Key="QuestionStateToBrush"/>
+        <converters:IndexToNumberConverter x:Key="IndexToNum"/>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
 
         <!--Question template-->
